feat: add ci/cd to app